--- a/.env
+++ b/.env
@@ -59,4 +59,7 @@ VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TELEGRAM_BOT_TOKEN=5373817318:AAF4tHynVvmWuQUBBcb10r7JPlAVBsU2u9I
 TELEGRAM_ASYNC_REQUESTS=false
+YOOKASSA_PROVIDER_TOKEN=381764678:TEST:61202
+YOOKASSA_SHOP_ID=506751
+YOOKASSA_SHOP_ARTICLE_ID=538350
 
