--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+TELEGRAM_BOT_TOKEN=YOUR_TOKEN
+TELEGRAM_ASYNC_REQUESTS=false
+YOOKASSA_PROVIDER_TOKEN=YOUR
+YOOKASSA_SHOP_ID=YOUR
+YOOKASSA_SHOP_ARTICLE_ID=YOUR
