--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -62,3 +62,12 @@ TELEGRAM_ASYNC_REQUESTS=false
 YOOKASSA_PROVIDER_TOKEN=YOUR
 YOOKASSA_SHOP_ID=YOUR
 YOOKASSA_SHOP_ARTICLE_ID=YOUR
+
+ADMIN_TG_ID=NEED_FOR_SEED
+ADMIN_USERNAME=NEED_FOR_SEED
+ADMIN_FIRST_NAME=NEED_FOR_SEED
+ADMIN_LAST_NAME=NEED_FOR_SEED
+ADMIN_LANGUAGE=ru
+ADMIN_ROLE_ID=1
+ADMIN_MAIL=NEED_FOR_SEED
+ADMIN_NUMBER=NEED_FOR_SEED
